Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/DefiniteAssignment/T4718142.out
T4718142.java:20:17: compiler.err.var.might.be.assigned.in.loop: i
1 error
